--- a/src/main/resources/templates/purchases.html
+++ b/src/main/resources/templates/purchases.html
@@ -214,7 +214,7 @@
         }
 
         .money {
-            background: linear-gradient(135deg, #ffd700, #ffeb3b);
+            background: linear-gradient(135deg, black, black);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             font-weight: 700;
